--- a/docbuild/api/Scrapbook101core.AppVariables.yml
+++ b/docbuild/api/Scrapbook101core.AppVariables.yml
@@ -19,7 +19,7 @@ items:
   - Scrapbook101core.AppVariables.ItemDocumentType
   - Scrapbook101core.AppVariables.NoAssetImage
   - Scrapbook101core.AppVariables.TestCategories
-  - Scrapbook101core.AppVariables.TestDocuments
+  - Scrapbook101core.AppVariables.TestItems
   langs:
   - csharp
   - vb
@@ -30,15 +30,15 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AppVariables
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 20
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
-  summary: "\nDefines static variables that map to known values at application start and that \ndon&apos;t change during the application life time. These static variables mostly\nmap to the configu values in the <code>appsettings.json</code> file. For example,\nthe Document DB database name.\n"
+  summary: "\nDefines static variables that map to known values at application start and that \ndon&apos;t change during the application life time. These static variables mostly\nmap to the configuration values in the <code>appsettings.json</code> file. For example,\nthe Document DB database name.\n"
   example: []
   syntax:
     content: public static class AppVariables
@@ -74,8 +74,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AddTestAssets
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 22
@@ -109,8 +109,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ApplicationName
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 23
@@ -144,8 +144,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetBasePath
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 24
@@ -179,8 +179,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AuthKey
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 25
@@ -214,8 +214,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: NoAssetImage
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 26
@@ -249,8 +249,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BingMapKey
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 27
@@ -284,8 +284,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryDocumentType
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 28
@@ -319,8 +319,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CollectionId
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 29
@@ -354,8 +354,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DatabaseId
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 30
@@ -389,8 +389,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Endpoint
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 31
@@ -424,8 +424,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemDocumentType
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 32
@@ -459,8 +459,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: TestCategories
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 33
@@ -480,33 +480,33 @@ items:
   - Public
   - Shared
   - ReadOnly
-- uid: Scrapbook101core.AppVariables.TestDocuments
-  commentId: F:Scrapbook101core.AppVariables.TestDocuments
-  id: TestDocuments
+- uid: Scrapbook101core.AppVariables.TestItems
+  commentId: F:Scrapbook101core.AppVariables.TestItems
+  id: TestItems
   parent: Scrapbook101core.AppVariables
   langs:
   - csharp
   - vb
-  name: TestDocuments
-  nameWithType: AppVariables.TestDocuments
-  fullName: Scrapbook101core.AppVariables.TestDocuments
+  name: TestItems
+  nameWithType: AppVariables.TestItems
+  fullName: Scrapbook101core.AppVariables.TestItems
   type: Field
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
-    id: TestDocuments
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
+    id: TestItems
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 34
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
   syntax:
-    content: public static readonly string TestDocuments
+    content: public static readonly string TestItems
     return:
       type: System.String
-    content.vb: Public Shared ReadOnly TestDocuments As String
+    content.vb: Public Shared ReadOnly TestItems As String
   modifiers.csharp:
   - public
   - static
@@ -529,8 +529,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryDisplayList
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 36
@@ -566,8 +566,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFieldMappingList
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 37
