--- a/docbuild/api/Scrapbook101core.Controllers.ItemApiController.yml
+++ b/docbuild/api/Scrapbook101core.Controllers.ItemApiController.yml
@@ -20,8 +20,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ItemApiController
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 14
@@ -251,8 +251,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
     startLine: 27
@@ -323,11 +323,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DetailsAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
-    startLine: 66
+    startLine: 68
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
@@ -379,11 +379,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
-    startLine: 85
+    startLine: 87
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
@@ -454,11 +454,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: UpdateAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
-    startLine: 137
+    startLine: 139
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
@@ -534,11 +534,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Controllers/ItemApiController.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DeleteAsync
     path: ../Scrapbook101core/Controllers/ItemApiController.cs
-    startLine: 190
+    startLine: 192
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Controllers
