--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -17,8 +17,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: HelperClasses
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 12
@@ -61,8 +61,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BuildPathList
     path: ../Scrapbook101core/HelperClasses.cs
     startLine: 22
@@ -106,11 +106,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/HelperClasses.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetGeocode
     path: ../Scrapbook101core/HelperClasses.cs
-    startLine: 64
+    startLine: 63
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
