--- a/docbuild/api/Scrapbook101core.Models.CategoryFields.yml
+++ b/docbuild/api/Scrapbook101core.Models.CategoryFields.yml
@@ -8,6 +8,9 @@ items:
   - Scrapbook101core.Models.CategoryFields.Artist
   - Scrapbook101core.Models.CategoryFields.Author
   - Scrapbook101core.Models.CategoryFields.BirthDate
+  - Scrapbook101core.Models.CategoryFields.BirthPlace
+  - Scrapbook101core.Models.CategoryFields.DeathDate
+  - Scrapbook101core.Models.CategoryFields.DeathPlace
   - Scrapbook101core.Models.CategoryFields.Director
   - Scrapbook101core.Models.CategoryFields.Genre
   - Scrapbook101core.Models.CategoryFields.Highlight
@@ -29,8 +32,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFields
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 47
@@ -72,8 +75,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: this[]
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 52
@@ -112,8 +115,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Artist
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 59
@@ -147,8 +150,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Author
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 62
@@ -182,8 +185,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: BirthDate
     path: ../Scrapbook101core/Models/Category.cs
     startLine: 65
@@ -197,6 +200,111 @@ items:
       type: System.String
     content.vb: Public Property BirthDate As String
   overload: Scrapbook101core.Models.CategoryFields.BirthDate*
+  modifiers.csharp:
+  - public
+  - get
+  - set
+  modifiers.vb:
+  - Public
+- uid: Scrapbook101core.Models.CategoryFields.BirthPlace
+  commentId: P:Scrapbook101core.Models.CategoryFields.BirthPlace
+  id: BirthPlace
+  parent: Scrapbook101core.Models.CategoryFields
+  langs:
+  - csharp
+  - vb
+  name: BirthPlace
+  nameWithType: CategoryFields.BirthPlace
+  fullName: Scrapbook101core.Models.CategoryFields.BirthPlace
+  type: Property
+  source:
+    remote:
+      path: Scrapbook101core/Models/Category.cs
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
+    id: BirthPlace
+    path: ../Scrapbook101core/Models/Category.cs
+    startLine: 68
+  assemblies:
+  - Scrapbook101core
+  namespace: Scrapbook101core.Models
+  syntax:
+    content: public string BirthPlace { get; set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public Property BirthPlace As String
+  overload: Scrapbook101core.Models.CategoryFields.BirthPlace*
+  modifiers.csharp:
+  - public
+  - get
+  - set
+  modifiers.vb:
+  - Public
+- uid: Scrapbook101core.Models.CategoryFields.DeathDate
+  commentId: P:Scrapbook101core.Models.CategoryFields.DeathDate
+  id: DeathDate
+  parent: Scrapbook101core.Models.CategoryFields
+  langs:
+  - csharp
+  - vb
+  name: DeathDate
+  nameWithType: CategoryFields.DeathDate
+  fullName: Scrapbook101core.Models.CategoryFields.DeathDate
+  type: Property
+  source:
+    remote:
+      path: Scrapbook101core/Models/Category.cs
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
+    id: DeathDate
+    path: ../Scrapbook101core/Models/Category.cs
+    startLine: 71
+  assemblies:
+  - Scrapbook101core
+  namespace: Scrapbook101core.Models
+  syntax:
+    content: public string DeathDate { get; set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public Property DeathDate As String
+  overload: Scrapbook101core.Models.CategoryFields.DeathDate*
+  modifiers.csharp:
+  - public
+  - get
+  - set
+  modifiers.vb:
+  - Public
+- uid: Scrapbook101core.Models.CategoryFields.DeathPlace
+  commentId: P:Scrapbook101core.Models.CategoryFields.DeathPlace
+  id: DeathPlace
+  parent: Scrapbook101core.Models.CategoryFields
+  langs:
+  - csharp
+  - vb
+  name: DeathPlace
+  nameWithType: CategoryFields.DeathPlace
+  fullName: Scrapbook101core.Models.CategoryFields.DeathPlace
+  type: Property
+  source:
+    remote:
+      path: Scrapbook101core/Models/Category.cs
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
+    id: DeathPlace
+    path: ../Scrapbook101core/Models/Category.cs
+    startLine: 74
+  assemblies:
+  - Scrapbook101core
+  namespace: Scrapbook101core.Models
+  syntax:
+    content: public string DeathPlace { get; set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public Property DeathPlace As String
+  overload: Scrapbook101core.Models.CategoryFields.DeathPlace*
   modifiers.csharp:
   - public
   - get
@@ -217,11 +325,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Director
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 68
+    startLine: 77
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -252,11 +360,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Genre
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 71
+    startLine: 80
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -287,11 +395,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Highlight
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 74
+    startLine: 83
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -322,11 +430,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Location
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 77
+    startLine: 86
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -357,11 +465,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Lodging
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 80
+    startLine: 89
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -392,11 +500,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Synopsis
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 83
+    startLine: 92
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -427,11 +535,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Theme
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 86
+    startLine: 95
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -462,11 +570,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Type
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 89
+    startLine: 98
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -497,11 +605,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Who
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 92
+    startLine: 101
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -532,11 +640,11 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Category.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Year
     path: ../Scrapbook101core/Models/Category.cs
-    startLine: 95
+    startLine: 104
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core.Models
@@ -878,6 +986,21 @@ references:
   name: BirthDate
   nameWithType: CategoryFields.BirthDate
   fullName: Scrapbook101core.Models.CategoryFields.BirthDate
+- uid: Scrapbook101core.Models.CategoryFields.BirthPlace*
+  commentId: Overload:Scrapbook101core.Models.CategoryFields.BirthPlace
+  name: BirthPlace
+  nameWithType: CategoryFields.BirthPlace
+  fullName: Scrapbook101core.Models.CategoryFields.BirthPlace
+- uid: Scrapbook101core.Models.CategoryFields.DeathDate*
+  commentId: Overload:Scrapbook101core.Models.CategoryFields.DeathDate
+  name: DeathDate
+  nameWithType: CategoryFields.DeathDate
+  fullName: Scrapbook101core.Models.CategoryFields.DeathDate
+- uid: Scrapbook101core.Models.CategoryFields.DeathPlace*
+  commentId: Overload:Scrapbook101core.Models.CategoryFields.DeathPlace
+  name: DeathPlace
+  nameWithType: CategoryFields.DeathPlace
+  fullName: Scrapbook101core.Models.CategoryFields.DeathPlace
 - uid: Scrapbook101core.Models.CategoryFields.Director*
   commentId: Overload:Scrapbook101core.Models.CategoryFields.Director
   name: Director
